css header avancé

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
                     </div>
                     <p class="date">DU 19 AU 21 SEPTEMBRE 2025</p>
                 </div>
+            <div><h2 classe="sous-titre">PRENEZ VOS PLACES DES MAINTENANT</h2>
+                 </div>
             
-                <div class="cta-container">
-                    <a href="billeterie.html" class="cta-button">RÉSERVER</a>
+                <div class="RESERVER">
+                    <a href="billeterie.html" class="RESERVER">RESERVER</a>
                 </div>
             
                 <script src="script.js"></script>
