--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                  <a href="menu.html">
                     <img src="/assets/icones/Menu.png" alt="Menu">
                   </a>
+                  <div class="header_pic">
+                  <img src="assets/images/header_pic2.png" alt="header_pic2">
+                </div>
                   <script src="script.js" defer></script>
                   <div class="main-content">
                     <div class="title-container">
