retirer bug padding des partenaires/ section à propos + problème padding/margin du heade/bandeau

--- a/index.html
+++ b/index.html
@@ -58,24 +58,25 @@
 
     <!-- Section À Propos -->
     <section class="about">
-        <h2 class="about__title">À PROPOS</h2>
+        <h2 class="about__title">A PROPOS</h2>
         <p class="about__text">
             Vis'Sport, un festival audiovisuel / numérique : une opportunité de partager des moments en famille et de découvrir le sport sous un autre angle.
         </p>
         <a href="about.html" class="about__link">→ Lire la suite</a>
     </section>
 
+
     <!-- Section Partenaires -->
     <section class="partners">
         <h2 class="partners__title">PARTENAIRES:</h2>
         <div class="partners__logos">
-            <img src="region.jpg" alt="Région Bourgogne Franche-Comté" class="partners__logo">
-            <img src="decathlon.jpg" alt="Decathlon" class="partners__logo">
+            <img src="/assets/images/partenaire1.png" alt="Région Bourgogne Franche-Comté" class="partners__logo">
+            <img src="/assets/images/partenaire2.png" alt="Decathlon" class="partners__logo">
         </div>
     </section>
 
     <!-- Footer -->
-    <<footer class="footer">
+    <footer class="footer">
         <div class="footer__container">
           <!-- Contact Section -->
           <div class="footer__contact">
