remise en place des categories selon BEM + importation des typographies.  + remettre dans les bons css les elements

--- a/index.html
+++ b/index.html
@@ -27,39 +27,38 @@
 </section>
 
     <!-- Section Actualités -->
-    <section class="news">
-        <h2 class="news__title">Actualités</h2>
-        <div class="news__item">
-            <img src="/assets/images/invitee.png" alt="Marie-Amélie Le Fur" class="news__image">
-            <div class="news__caption">
-                <h3 class="news__subtitle">MARIE-AMÉLIE LE FUR</h3>
-                <p class="news__description">Explique pourquoi ce festival l'a touché.</p>
+    <section class="actualite">
+        <h2 class="actualite__titre">Actualités</h2>
+        <div class="actualite__item">
+            <img src="/assets/images/invitee.png" alt="Marie-Amélie Le Fur" class="actualite__image">
+            <div class="actualite__description">
+                <h3 class="actualie__subtitle">MARIE-AMÉLIE LE FUR</h3>
+                <p class="actualite__description">Explique pourquoi ce festival l'a touché.</p>
             </div>
         </div>
-        <div class="news__item">
-            <img src="/assets/images/film.png" alt="The Fire Inside" class="news__image">
-            <div class="news__caption">
-                <h3 class="news__subtitle">THE FIRE INSIDE</h3>
-                <p class="news__description">Le film à ne pas louper.</p>
+        <div class="actualite__item">
+            <img src="/assets/images/film.png" alt="The Fire Inside" class="actualite__image">
+            <div class="actualite__description">
+                <h3 class="actualite__subtitle">THE FIRE INSIDE</h3>
+                <p class="actualite__description">Le film à ne pas louper.</p>
             </div>
         </div>
     </section>
 
     <!-- Section Ancienne Édition -->
-    <section class="old-edition">
-        <h2 class="old-edition__title">ANCIENNE ÉDITION</h2>
-        <div class="old-edition__carousel">
-            <div class="old-edition__carousel-item"><img src="/assets/images/caroussel_1.png" alt="Ancienne édition 1"></div>
-            <div class="old-edition__carousel-item"><img src="/assets/images/caroussel_2.png" alt="Ancienne édition 2"></div>
-            <div class="old-edition__carousel-item"><img src="/assets/images/caroussel_3.png" alt="Ancienne édition 3"></div>
-            <h2 class="old-edition__title2">ANCIENNE ÉDITION</h2>
+    <section class="ancienne-edition">
+        <h2 class="ancienne-edition__titre">ANCIENNE ÉDITION</h2>
+        <div class="ancienne-edition__carousel">
+            <div class="ancienne-edition__carousel-item"><img src="/assets/images/caroussel_1.png" alt="Ancienne édition 1"></div>
+            <div class="ancienne-edition__carousel-item"><img src="/assets/images/caroussel_2.png" alt="Ancienne édition 2"></div>
+            <div class="ancienne-edition__carousel-item"><img src="/assets/images/caroussel_3.png" alt="Ancienne édition 3"></div>
         </div>
     </section>
 
     <!-- Section À Propos -->
-    <section class="about">
-        <h2 class="about__title">A PROPOS</h2>
-        <p class="about__text">
+    <section class="apropos">
+        <h2 class="apropos__titre">A PROPOS</h2>
+        <p class="apropos__text">
             Vis'Sport, un festival audiovisuel / numérique : une opportunité de partager des moments en famille et de découvrir le sport sous un autre angle.
         </p>
         <a href="about.html" class="about__link">→ Lire la suite</a>
@@ -67,11 +66,11 @@
 
 
     <!-- Section Partenaires -->
-    <section class="partners">
-        <h2 class="partners__title">PARTENAIRES:</h2>
-        <div class="partners__logos">
-            <img src="/assets/images/partenaire1.png" alt="Région Bourgogne Franche-Comté" class="partners__logo">
-            <img src="/assets/images/partenaire2.png" alt="Decathlon" class="partners__logo">
+    <section class="partenaire">
+        <h2 class="partenaire__titre">PARTENAIRES:</h2>
+        <div class="partenaire__logos">
+            <img src="/assets/images/partenaire1.png" alt="Région Bourgogne Franche-Comté" class="partenaire__logos">
+            <img src="/assets/images/partenaire2.png" alt="Decathlon" class="partenaire__logos">
         </div>
     </section>
 
