création du html de ma page "à propos"

--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
 <section class="bandeau">
     <div class="bandeau__cta">
         <p>PRENEZ VOS PLACES DES MAINTENANT!</p>
-        <a href="reservation.html" class="bandeau__button">RESERVER</a>
+        <a href="reservation.html" class="bandeau__bouton">RESERVER</a>
     </div>
 </section>
 
     <!-- Section Actualités -->
     <section class="actualite">
-        <h2 class="actualite__titre">Actualités</h2>
+        <h2 class="actualite__titre">Actualites</h2>
         <div class="actualite__item">
             <img src="/assets/images/invitee.png" alt="Marie-Amélie Le Fur" class="actualite__image">
-            <div class="actualite__description">
-                <h3 class="actualie__subtitle">MARIE-AMÉLIE LE FUR</h3>
+            <div class="actualite__sub">
+                <h3 class="actualie__subtitle">MARIE-AMELIE LE FUR</h3>
                 <p class="actualite__description">Explique pourquoi ce festival l'a touché.</p>
             </div>
         </div>
         <div class="actualite__item">
             <img src="/assets/images/film.png" alt="The Fire Inside" class="actualite__image">
-            <div class="actualite__description">
+            <div class="actualite__sub">
                 <h3 class="actualite__subtitle">THE FIRE INSIDE</h3>
                 <p class="actualite__description">Le film à ne pas louper.</p>
             </div>
