--- a/index.html
+++ b/index.html
@@ -5,54 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vis'Sport</title>
     <link rel="stylesheet" href="/src/css/style.css">
-    <script defer src="script.js"></script>
+    <script type="module" src="/src/js/script.js"></script>
 </head>
 <body>
-    <!-- Header -->
-    <header class="header">
-      <button class="headermenu-btn menu-btn" aria-label="menu" aria-expanded="false" aria-controls="mainNav">
-        <span class="menu-btnbar" aria-hidden="true"></span>
-        <span class="menu-btnbar" aria-hidden="true"></span>
+  <header class="header">
+    <button
+        class="menu-btn"
+        aria-label="menu"
+        aria-expanded="false"
+        aria-controls="mainNav"
+        
+    >
+    
+    <img src="/assets/icones/Menu.png" alt="Menu" class="menu-icon" />
         <span class="menu-btnbar" aria-hidden="true"></span>
     </button>
-        <nav class="header__menu menu" id="mainNav" aria-hidden="true">
-            <ul class="menu__list list-unstyled">
-                <li class="menu__item">
-                    <a class="menu__link" href="/a_propos.html">A propos</a>
-                </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/billeterie.html">Billeterie en ligne</a>
-                </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/activites.html">Activités/Programme</a>
-                </li>
-                <li class="menu__item">
-                    <a class="menu__link" href="/equipe.html">Notre équipe</a>
-                </li>
-                <li class="menu__item">
-                  <a class="menu__link" href="/valeur.html">Valeurs</a>
-              </li>
-            </ul>
-          </nav>
-          <nav class="header__nav">
-              <button class="header__burger menu-btn" aria-expanded="false" aria-label="Menu">
-                  <img src="/assets/icones/Menu.png" alt="Ouvrir le menu" class="header__burger-icon" />
-              </button>
-          </nav>
-        <div class="header__content">
-            <h1 class="header__title">VIS'SPORT</h1>
-            <p class="header__date">DU 19 AU 21 SEPTEMBRE 2025</p>
-        </div>
-    </header>
-    <div class="separator"></div>
+    <nav class="header__menu menu" id="mainNav" aria-hidden="true">
+        <ul class="menu__list list-unstyled">
+            <li class="menu__item">
+                <a class="menu__link" href="/a_propos.html">A propos</a>
+            </li>
+            <li class="menu__item">
+                <a class="menu__link" href="/billeterie.html">Billeterie en ligne</a>
+            </li>
+            <li class="menu__item">
+                <a class="menu__link" href="/activites.html">Activités/Programme</a>
+            </li>
+            <li class="menu__item">
+                <a class="menu__link" href="/equipe.html">Notre équipe</a>
+            </li>
+            <li class="menu__item">
+                <a class="menu__link" href="/valeur.html">Valeurs</a>
+            </li>
+        </ul>
+    </nav>
+    <div class="header__content">
+        <h1 class="header__title">VIS'SPORT</h1>
+        <p class="header__date">DU 19 AU 21 SEPTEMBRE 2025</p>
+    </div>
+</header>
+<section>
+<div class="separator"></div>
 <section class="bandeau">
     <div class="bandeau__cta">
         <p>PRENEZ VOS PLACES DES MAINTENANT!</p>
         <a href="reservation.html" class="bandeau__bouton">RESERVER</a>
     </div>
 </section>
-
-    <!-- Section Actualités -->
     <section class="actualite">
         <h2 class="actualite__titre">Actualites</h2>
         <div class="actualite__item">
