rajoute d'une page html + de son css et rectification probleme padding header et footer

--- a/a_propos.html
+++ b/a_propos.html
@@ -42,6 +42,10 @@
     <div class="header__content">
         <h1 class="header__title">VIS'SPORT</h1>
 </header>
+<section>
+    <div class="separator"></div>
+    <section class="bandeau2">
+    </section>
 <body>
     <main class="main-content">
         <section class="about">
