regalges bug css

--- a/a_propos.html
+++ b/a_propos.html
@@ -50,6 +50,8 @@
     <main class="main-content">
         <section class="about">
             <h1 class="about__title">A propos...</h1>
+            <section class="bandeau2">
+            </section>
             <div class="about__description">
                 <p>Vis’Sport, un festival audiovisuel / numérique : une opportunité de 
                     passer un moment de  partage amusant et divertissant en famille 
