--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             <li class="menu__item">
                 <a class="menu__link" href="/valeur.html">Valeurs</a>
             </li>
+            <li class="menu__item">
+              <a class="menu__link" href="film.html">Film</a>
+          </li>
         </ul>
     </nav>
     <div class="header__content">
