reglage js + menu

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="actualite__item">
             <img src="/assets/images/invitee.png" alt="Marie-Amélie Le Fur" class="actualite__image">
             <div class="actualite__sub">
-                <h3 class="actualie__subtitle">MARIE-AMELIE LE FUR</h3>
+                <h3 class="actualite__subtitle">MARIE-AMELIE LE FUR</h3>
                 <p class="actualite__description">Explique pourquoi ce festival l'a touché.</p>
             </div>
         </div>
@@ -81,6 +81,14 @@
             <div class="ancienne-edition__carousel-item"><img src="/assets/images/caroussel_2.png" alt="Ancienne édition 2"></div>
             <div class="ancienne-edition__carousel-item"><img src="/assets/images/caroussel_3.png" alt="Ancienne édition 3"></div>
         </div>
+        <div class="carousel__controls">
+          <button class="carousel__button carousel__button--prev" aria-label="Défiler vers la gauche">
+            <img src="/assets/icones/Arrow left-circle.png" alt="fleche gauche" />
+          </button>
+          <button class="carousel__button carousel__button--next" aria-label="Défiler vers la droite">
+            <img src="/assets/icones/Arrow right-circle.png" alt="fleche droite" />
+          </button>
+      </div>
     </section>
 
     <!-- Section À Propos -->
