ajoute normalize.css pour fixer les bugs

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <p class="apropos__text">
             Vis'Sport, un festival audiovisuel / numérique : une opportunité de partager des moments en famille et de découvrir le sport sous un autre angle.
         </p>
-        <a href="about.html" class="about__link">→ Lire la suite</a>
+        <a href="a_propos.html" class="about__link">→ Lire la suite</a>
     </section>
 
 
