ajout d'un hypertext qui ramène à la page d'accueil

--- a/a_propos.html
+++ b/a_propos.html
@@ -40,9 +40,11 @@
         </ul>
     </nav>
     <div class="header__content">
-        <h1 class="header__title">VIS'SPORT</h1>
-</header>
-<section>
+        <a href="index.html">
+            <h1 class="header__title">VIS'SPORT</h1>
+        </a>
+    </div>
+    </header>
     <div class="separator"></div>
     <section class="bandeau2">
     </section>
