--- a/film.html
+++ b/film.html
@@ -40,8 +40,12 @@
         </ul>
     </nav>
     <div class="header__content">
-        <h1 class="header__title">VIS'SPORT</h1>
+        <a href="index.html">
+            <h1 class="header__title">VIS'SPORT</h1>
+        </a>
+    </div>
     </header>
+</header>
     <body class="page">
         <section class="movie">
             <h1 class="movie__title">THE FIRE INSIDE</h1>
