--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
         </ul>
     </nav>
     <div class="header__content">
+      <a href="index.html">
         <h1 class="header__title">VIS'SPORT</h1>
+      </a>
         <p class="header__date">DU 19 AU 21 SEPTEMBRE 2025</p>
     </div>
 </header>
