--- a/valeur.html
+++ b/valeur.html
@@ -40,6 +40,9 @@
         </ul>
     </nav>
     <div class="header__content">
-        <h1 class="header__title">VIS'SPORT</h1>
+        <a href="index.html">
+            <h1 class="header__title">VIS'SPORT</h1>
+        </a>
+    </div>
     </header>
     
