--- a/equipe.html
+++ b/equipe.html
@@ -45,3 +45,44 @@
         </a>
     </div>
     </header>
+    <section class="accordeon">
+    <body>
+        <h1>Test Accordéon</h1>
+        <div class="accordeon">
+          <details open>
+            <summary><img src="/assets/icones/accordeon1.png" alt="Manon Gachet"></summary>
+            <div>
+              <h3>MARION GACHET</h3>
+              <p>direction et stratégie
+                Directeur/Directrice du festival : Supervise l’ensemble du festival, fixe les grandes orientations.
+                Coordinateur/Coordinatrice général(e) : Veille au bon déroulement de toutes les opérations.
+                Responsable logistique et infrastructures : Gère l’installation des équipements, terrains, stands, etc.
+                Responsable des relations partenaires : Cherche des sponsors et partenaires pour financer l’événement.</p>
+            </div>
+          </details>
+          <details>
+            <summary><img src="/assets/icones/accordeon2.png" alt="Sebastian Grocolet"></summary>
+            <div>
+              <h3>Sebastian Grocolet</h3>
+              <p>Équipe sportive et animations
+                Responsable des activités sportives : Planifie les compétitions, démonstrations et initiations.
+                Animateurs sportifs : Encadrent les participants lors des activités.
+                Responsable des bénévoles : Recrute, forme et coordonne les bénévoles pour aider sur les stands, inscriptions, etc.
+                Responsable du programme culturel : Gère les spectacles, conférences ou expositions liés au sport.</p>
+            </div>
+          </details>
+          <details>
+            <summary><img src="/assets/icones/accordeon3.png" alt="Hugo Morel"></summary>
+            <div>
+              <h3>Hugo Morel</h3>
+              <p>accueil et gestion des publics
+                Responsable des inscriptions : Supervise les inscriptions des participants (en ligne et sur place).
+                Responsable billetterie : S’occupe de la vente des tickets (si applicable).
+                Responsable sécurité et accès : Planifie les mesures de sécurité (agents de sécurité, gestion des flux).
+                Responsable de l’accueil VIP : Prend soin des invités spéciaux (sportifs, officiels).
+                Responsable restauration et food trucks : Supervise les stands de nourriture et de boissons.</p>
+            </div>
+          </details>
+        </div>
+      </body>
+    </section>
