--- a/equipe.html
+++ b/equipe.html
@@ -47,13 +47,13 @@
     </header>
     <section class="accordeon">
     <body>
-        <h1>Test Accordéon</h1>
+        <h1 class="titre_equipe">NOTRE EQUIPE</h1>
         <div class="accordeon">
           <details open>
             <summary><img src="/assets/icones/accordeon1.png" alt="Manon Gachet"></summary>
             <div>
-              <h3>MARION GACHET</h3>
-              <p>direction et stratégie
+              <h3 class="accordeon_titre">MARION GACHET</h3>
+              <p class="accordeon_description">direction et stratégie
                 Directeur/Directrice du festival : Supervise l’ensemble du festival, fixe les grandes orientations.
                 Coordinateur/Coordinatrice général(e) : Veille au bon déroulement de toutes les opérations.
                 Responsable logistique et infrastructures : Gère l’installation des équipements, terrains, stands, etc.
@@ -63,8 +63,8 @@
           <details>
             <summary><img src="/assets/icones/accordeon2.png" alt="Sebastian Grocolet"></summary>
             <div>
-              <h3>Sebastian Grocolet</h3>
-              <p>Équipe sportive et animations
+                <h3 class="accordeon_titre">Sebastian Grocolet</h3>
+                <p class="accordeon_description">Équipe sportive et animations
                 Responsable des activités sportives : Planifie les compétitions, démonstrations et initiations.
                 Animateurs sportifs : Encadrent les participants lors des activités.
                 Responsable des bénévoles : Recrute, forme et coordonne les bénévoles pour aider sur les stands, inscriptions, etc.
@@ -74,8 +74,8 @@
           <details>
             <summary><img src="/assets/icones/accordeon3.png" alt="Hugo Morel"></summary>
             <div>
-              <h3>Hugo Morel</h3>
-              <p>accueil et gestion des publics
+            <h3 class="accordeon_titre">Hugo Morel</h3>
+            <p class="accordeon_description">accueil et gestion des publics
                 Responsable des inscriptions : Supervise les inscriptions des participants (en ligne et sur place).
                 Responsable billetterie : S’occupe de la vente des tickets (si applicable).
                 Responsable sécurité et accès : Planifie les mesures de sécurité (agents de sécurité, gestion des flux).
