--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
                 <a class="menu__link" href="/valeur.html">Valeurs</a>
             </li>
             <li class="menu__item">
-              <a class="menu__link" href="film.html">Film</a>
+              <a class="menu__link" href="the_fire_inside.html">The Fire Inside</a>
           </li>
+          <li class="menu__item">
+            <a class="menu__link" href="film.html">Films</a>
+        </li>
         </ul>
     </nav>
     <div class="header__content">
