reglagle bug menu butoun + header qui ne fit pas avec la page

--- a/a_propos.html
+++ b/a_propos.html
@@ -22,6 +22,9 @@
     </button>
     <nav class="header__menu menu" id="mainNav" aria-hidden="true">
         <ul class="menu__list list-unstyled">
+          <li class="menu__item">
+            <a class="menu__link" href="/index.html">Accueil</a>
+        </li>
             <li class="menu__item">
                 <a class="menu__link" href="/a_propos.html">A propos</a>
             </li>
@@ -37,6 +40,12 @@
             <li class="menu__item">
                 <a class="menu__link" href="/valeur.html">Valeurs</a>
             </li>
+            <li class="menu__item">
+              <a class="menu__link" href="the_fire_inside.html">The Fire Inside</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link" href="film.html">Films</a>
+        </li>
         </ul>
     </nav>
     <div class="header__content">
